--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ lib/generated_plugin_registrant.dart
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+android/app/src/main/java/
+lib/generated/
+res/
